JBIDE-28599: fix warnings on Java 17
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>